School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_cast/cast_FloatToInt.deca
//Utilisation d'un cast int sur un float
//
{
    int i = (int)(1.6);
    println(i);
}
