School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_declarations/wrong_typeDecl.deca
//Declaration d'une variable avec un type qui n'existe pas
//erreur attendue : inte is an invalid type

{
    inte i = 10;
    println("faute de frappe...");
}